# ogv-for-virtualclass

./: Makefile  README.md  package-lock.json  package.json  webpack.config.js
dav1d/: meson.build  meson_options.txt
dav1d/include/common/: attributes.h
dav1d/include/compat/fake_atomics/: stdatomic.h
dav1d/include/dav1d/: common.h
dav1d/src/: cdef.h  cdef_tmpl.c  cpu.c  cpu.h  looprestoration.h  looprestoration_tmpl.c  mc.h  mc_tmpl.c  meson.build
dav1d/src/wasm/: cdef.c  cdef_init_tmpl.c  cpu.c  cpu.h  looprestoration_tmpl.c  mc.c  mc_init_tmpl.c  wasm_simd.h
demo/media/: demo.webm
examples/simple/: index2.html
libskeleton/: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  skeleton-uninstalled.pc.in  skeleton.pc.in
libskeleton/doc/: Doxyfile.in  Makefile.am
libskeleton/examples/: Makefile.am  skeleton-apply.c  skeleton-info.c
libskeleton/include/: Makefile.am
libskeleton/include/skeleton/: Makefile.am  skeleton.h
libskeleton/src/: Makefile.am  Version_script.in  skeleton.c  skeleton_private.h  skeleton_query.c  skeleton_vector.h
libtheora/: configure.ac
libvpx/vp8/common/: loopfilter.h  loopfilter_filters.c  vp8_loopfilter.c
libvpx/vpx_dsp/: loopfilter.c  vpx_convolve.c
src/js/: OGVPlayer.js  OGVPlayer.txt  OGVWorkerVideo.js  OGVWrapperCodec.js
